--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <img class="place__image" src="images/place-kosa.jpg" alt="Куршская коса">
             <div class="place__website">
                 <p class="place__website__url-heading">URL</p>
-                <a class="place__website__link" href="http://park-kosa.ru">park-kosa.ru</a>
+                <a class="place__website__link" href="http://park-kosa.ru" target="_blank">park-kosa.ru</a>
             </div>
             <p class="place__paragraph">Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных горизонта — спокойного Куршского залива с одной стороны и подёрнутого рябью волн Балтийского моря с другой. Уникальная природная зона на краю российского анклава.</p>
             <p class="place__paragraph">На этом Калининградская область не заканчивается. Для путешественника и исследователя там же по соседству — самая западная точка России, Балтийская коса, — и немецкое наследие россыпи небольших приморских городов. Атмосфера здешних мест исключает суету, окуная в спокойствие природы и запах стального, прохладного моря.</p>
@@ -61,7 +61,7 @@
             <img class="place__image" src="images/place-kolsky.jpg" alt="Кольский">
             <div class="place__website">
                 <p class="place__website__url-heading">URL</p>
-                <a class="place__website__link" href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy">National Geographic</a>
+                <a class="place__website__link" href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy" target="_blank">National Geographic</a>
             </div>
             <p class="place__paragraph">Почти весь полуостров находится за Полярным кругом. Саамская тундра, от которой на юг — 
                 тайга, а на север — Ледовитый океан, прикидывающийся Баренцевым морем.</p>
@@ -73,7 +73,7 @@
             <img class="place__image" src="images/place-altai.jpg" alt="Алтай">
             <div class="place__website">
                 <p class="place__website__url-heading">URL</p>
-                <a class="place__website__link" href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822">Facebook</a>
+                <a class="place__website__link" href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822" target="_blank">Facebook</a>
             </div>
             <p class="place__paragraph">Алтай — одно из красивейших мест в России. 
                 В первую очередь из-за гор: если ехать вдоль хребта, вы увидите склоны, усыпанные соснами, горные реки и озёра. А если вы откроете в автомобиле окна, сможете познакомиться с невидимым чудом здешних мест — горным воздухом.</p>
@@ -84,7 +84,7 @@
             <img class="place__image" src="images/place-winter-baikal.jpg" alt="Зимний Байкал">
             <div class="place__website">
                 <p class="place__website__url-heading">URL</p>
-                <a class="place__website__link" href="https://vk.com/baikalmile">https://vk.com/baikalmile</a>
+                <a class="place__website__link" href="https://vk.com/baikalmile" target="_blank">https://vk.com/baikalmile</a>
             </div>
             <p class="place__paragraph">Всем известен Байкал как крупнейшее озеро 
                 в мире. Многие также знают, что это самый большой источник пресной воды и одно из красивейших мест в России.</p>
@@ -96,7 +96,7 @@
             <img class="place__image" src="images/place-karelia.jpg" alt="Карелия">
             <div class="place__website">
                 <p class="place__website__url-heading">URL</p>
-                <a class="place__website__link" href="http://vodlozero.ru">http://vodlozero.ru/</a>
+                <a class="place__website__link" href="http://vodlozero.ru" target="_blank">http://vodlozero.ru/</a>
             </div>
             <p class="place__paragraph">Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу сибирская лиственница не растёт западнее Водлозера. Зато здесь она вымахивает на 30 метров — леса карельских национальных парков из-за непроходимых болот никогда не знали топора. Некоторым соснам уже больше чем полтысячелетия. Прикоснитесь к живому существу, видевшему солнце раньше, чем увидал его Иван Грозный. 
                 В девственном лесу на сотню километров не встретишь тропы. А на редких тропинках деревья 
@@ -104,18 +104,19 @@
         </div>
       </section>
       <section class="cover">
-        <h2 class="cover__title"></h2>
-        <h3 class="cover__subtitle"></h3>
-        <div class="cover__overlay"></div>
-        <div class="cover__background"></div>
+        <a class="cover__overlay" href="https://stampsy.com/na-elektrichkakh-do-baikala" target="_blank">
+          <div class="cover__background"></div>
+        </a>
+        <h2 class="cover__title">До Байкала «на собаках»</h2>
+        <h3 class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</h3>
       </section>
     </main>
     <footer class="footer">
-    <a class="footer__link" href="https://yandex.ru/maps">Карты</a>
-    <a class="footer__link" href="https://yandex.ru/pogoda">Погода</a>
-    <a class="footer__link" href="https://rasp.yandex.ru">Расписание</a>
-    <a class="footer__link" href="https://calendar.yandex.ru">Календарь</a>
-    <a class="footer__link" href="https://travel.yandex.ru">Путешествия</a>
+    <a class="footer__link" href="https://yandex.ru/maps" target="_blank">Карты</a>
+    <a class="footer__link" href="https://yandex.ru/pogoda" target="_blank">Погода</a>
+    <a class="footer__link" href="https://rasp.yandex.ru" target="_blank">Расписание</a>
+    <a class="footer__link" href="https://calendar.yandex.ru" target="_blank">Календарь</a>
+    <a class="footer__link" href="https://travel.yandex.ru" target="_blank">Путешествия</a>
     <p class="footer__copyright">© 2022. Арина Дзядзина</p>
     </footer>
   </div>
