забыла про ридми, но вовремя вспомнила об этом жуке

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
       </section>
       <section class="cover">
         <a class="cover__overlay" href="https://stampsy.com/na-elektrichkakh-do-baikala" target="_blank">
-          <div class="cover__background"></div>
+          <img class="cover__background" src="images/cover-trains.jpg" alt="фон с поездами">
         </a>
         <h2 class="cover__title">До Байкала «на собаках»</h2>
         <h3 class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</h3>
