--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
         <h1 class="lead__title">Путешествия по России</h1>
         <h2 class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</h2>
         <img class="lead__image" src="images/lead-polka.jpg" alt="Маршрут путешествия">
-        <p class="lead__caption">ваша полка — верхняя</p>
+        <div class="lead__caption-place">
+          <p class="lead__caption">ваша полка — верхняя</p>
+        </div>
       </section>
       <section class="intro">
         <h2 class="intro__title">Чего мы там не видели?</h2>
