--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
 </head>
 <body>
   <div class="page">
-    <section class="header">
+    <header class="header">
       <img class="header__logo" src="images/header-logo.svg" alt="Иконка России">
       <div class="header__langs">
         <a class="header__lang-link header__lang-link_underline" href="#">Ru</a>
         <a class="header__lang-link" href="#">En</a>
       </div>
-    </section>
+    </header>
     <main class="content">
       <section class="lead">
         <h1 class="lead__title">Путешествия по России</h1>
@@ -53,8 +53,8 @@
         <div class="place">
           <h3 class="place__title">Куршская коса</h3>
           <div class="place__website">
-            <p class="place__website__url-heading">URL</p>
-            <a class="place__website__link" href="http://park-kosa.ru" target="_blank">park-kosa.ru</a>
+            <p class="place__website_url-heading">URL</p>
+            <a class="place__website_link" href="http://park-kosa.ru" target="_blank">park-kosa.ru</a>
           </div>
           <img class="place__image" src="images/place-kosa.jpg" alt="Куршская коса">
           <div class="place__paragraphs">
@@ -65,8 +65,8 @@
         <div class="place">
           <h3 class="place__title">Кольский</h3>
           <div class="place__website">
-            <p class="place__website__url-heading">URL</p>
-            <a class="place__website__link" href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy" target="_blank">National Geographic</a>
+            <p class="place__website_url-heading">URL</p>
+            <a class="place__website_link" href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy" target="_blank">National Geographic</a>
           </div>
           <img class="place__image" src="images/place-kolsky.jpg" alt="Кольский">
           <div class="place__paragraphs">
@@ -79,8 +79,8 @@
         <div class="place">
           <h3 class="place__title">Алтай</h3>
           <div class="place__website">
-            <p class="place__website__url-heading">URL</p>
-            <a class="place__website__link" href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822" target="_blank">Facebook</a>
+            <p class="place__website_url-heading">URL</p>
+            <a class="place__website_link" href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822" target="_blank">Facebook</a>
           </div>
           <img class="place__image" src="images/place-altai.jpg" alt="Алтай">
           <div class="place__paragraphs">
@@ -92,8 +92,8 @@
         <div class="place">
           <h3 class="place__title">Зимний Байкал</h3>
           <div class="place__website">
-            <p class="place__website__url-heading">URL</p>
-            <a class="place__website__link" href="https://vk.com/baikalmile" target="_blank">https://vk.com/baikalmile</a>
+            <p class="place__website_url-heading">URL</p>
+            <a class="place__website_link" href="https://vk.com/baikalmile" target="_blank">https://vk.com/baikalmile</a>
           </div>
           <img class="place__image" src="images/place-winter-baikal.jpg" alt="Зимний Байкал">
           <div class="place__paragraphs">
@@ -106,8 +106,8 @@
         <div class="place">
           <h3 class="place__title">Карелия</h3>
           <div class="place__website">
-            <p class="place__website__url-heading">URL</p>
-            <a class="place__website__link" href="http://vodlozero.ru" target="_blank">http://vodlozero.ru/</a>
+            <p class="place__website_url-heading">URL</p>
+            <a class="place__website_link" href="http://vodlozero.ru" target="_blank">http://vodlozero.ru/</a>
         </div>
           <img class="place__image" src="images/place-karelia.jpg" alt="Карелия">
           <div class="place__paragraphs">
@@ -126,11 +126,13 @@
       </section>
     </main>
     <footer class="footer">
-      <a class="footer__link" href="https://yandex.ru/maps" target="_blank">Карты</a>
-      <a class="footer__link" href="https://yandex.ru/pogoda" target="_blank">Погода</a>
-      <a class="footer__link" href="https://rasp.yandex.ru" target="_blank">Расписание</a>
-      <a class="footer__link" href="https://calendar.yandex.ru" target="_blank">Календарь</a>
-      <a class="footer__link" href="https://travel.yandex.ru" target="_blank">Путешествия</a>
+      <nav class="footer__links">
+        <a class="footer__link" href="https://yandex.ru/maps" target="_blank">Карты</a>
+        <a class="footer__link" href="https://yandex.ru/pogoda" target="_blank">Погода</a>
+        <a class="footer__link" href="https://rasp.yandex.ru" target="_blank">Расписание</a>
+        <a class="footer__link" href="https://calendar.yandex.ru" target="_blank">Календарь</a>
+        <a class="footer__link" href="https://travel.yandex.ru" target="_blank">Путешествия</a>
+      </nav>
       <p class="footer__copyright">© 2022. Арина Дзядзина</p>
     </footer>
   </div>
