--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header class="header">
       <img class="header__logo" src="images/header-logo.svg" alt="Иконка России">
       <div class="header__langs">
-        <a class="header__lang-link header__lang-link_underline" href="#">Ru</a>
+        <a class="header__lang-link header__lang-underline" href="#">Ru</a>
         <a class="header__lang-link" href="#">En</a>
       </div>
     </header>
@@ -35,7 +35,7 @@
             <li><span class="bold">Аэропортов</span> 241</li>
           </ul>
       </section>
-      <section class="photo-grid">
+      <div class="photo-grid">
         <img class="photo-grid__item" src="images/photo-grid-train.jpg" alt="Одна из красивых фотографий">
         <img class="photo-grid__item" src="images/photo-grid-atharva-tulsi.jpg" alt="Одна из красивых фотографий">
         <img class="photo-grid__item" src="images/photo-grid-tuman.jpg" alt="Одна из красивых фотографий">
@@ -48,13 +48,13 @@
         <img class="photo-grid__item" src="images/photo-grid-kamchatka2.jpg" alt="Одна из красивых фотографий">
         <img class="photo-grid__item" src="images/photo-grid-baikal-2.jpg" alt="Одна из красивых фотографий">
         <img class="photo-grid__item" src="images/photo-grid-ergaki.jpg" alt="Одна из красивых фотографий">
-      </section>
+      </div>
       <section class="places">
         <div class="place">
           <h3 class="place__title">Куршская коса</h3>
           <div class="place__website">
-            <p class="place__website_url-heading">URL</p>
-            <a class="place__website_link" href="http://park-kosa.ru" target="_blank">park-kosa.ru</a>
+            <p class="place__website-url-heading">URL</p>
+            <a class="place__website-link" href="http://park-kosa.ru" target="_blank">park-kosa.ru</a>
           </div>
           <img class="place__image" src="images/place-kosa.jpg" alt="Куршская коса">
           <div class="place__paragraphs">
@@ -65,8 +65,8 @@
         <div class="place">
           <h3 class="place__title">Кольский</h3>
           <div class="place__website">
-            <p class="place__website_url-heading">URL</p>
-            <a class="place__website_link" href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy" target="_blank">National Geographic</a>
+            <p class="place__website-url-heading">URL</p>
+            <a class="place__website-link" href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy" target="_blank">National Geographic</a>
           </div>
           <img class="place__image" src="images/place-kolsky.jpg" alt="Кольский">
           <div class="place__paragraphs">
@@ -79,8 +79,8 @@
         <div class="place">
           <h3 class="place__title">Алтай</h3>
           <div class="place__website">
-            <p class="place__website_url-heading">URL</p>
-            <a class="place__website_link" href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822" target="_blank">Facebook</a>
+            <p class="place__website-url-heading">URL</p>
+            <a class="place__website-link" href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822" target="_blank">Facebook</a>
           </div>
           <img class="place__image" src="images/place-altai.jpg" alt="Алтай">
           <div class="place__paragraphs">
@@ -92,8 +92,8 @@
         <div class="place">
           <h3 class="place__title">Зимний Байкал</h3>
           <div class="place__website">
-            <p class="place__website_url-heading">URL</p>
-            <a class="place__website_link" href="https://vk.com/baikalmile" target="_blank">https://vk.com/baikalmile</a>
+            <p class="place__website-url-heading">URL</p>
+            <a class="place__website-link" href="https://vk.com/baikalmile" target="_blank">https://vk.com/baikalmile</a>
           </div>
           <img class="place__image" src="images/place-winter-baikal.jpg" alt="Зимний Байкал">
           <div class="place__paragraphs">
@@ -106,8 +106,8 @@
         <div class="place">
           <h3 class="place__title">Карелия</h3>
           <div class="place__website">
-            <p class="place__website_url-heading">URL</p>
-            <a class="place__website_link" href="http://vodlozero.ru" target="_blank">http://vodlozero.ru/</a>
+            <p class="place__website-url-heading">URL</p>
+            <a class="place__website-link" href="http://vodlozero.ru" target="_blank">http://vodlozero.ru/</a>
         </div>
           <img class="place__image" src="images/place-karelia.jpg" alt="Карелия">
           <div class="place__paragraphs">
